# Snake

./: CMakeLists.txt  README.md  snake.c  snake.h  snake_function.h  snake_struct.h
map/: map.json
save/: save.json
